--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "imagekit": "^6.0.0",
+    "mongoose": "^9.1.5",
+    "multer": "^2.0.2"
   }
 }
